--- a/page2/index.html
+++ b/page2/index.html
@@ -419,9 +419,10 @@
                                           class="adapt-img"
                                           src="images/informacion.png"
                                         /> -->
+                                        <!-- nuevo -->
                                         <div
                                           id="informacion"
-                                          class="contenedor"
+                                          class="contenedor info-cuadro"
                                         >
                                           <div class="box">
                                             <div class="circulo-img">
@@ -555,6 +556,7 @@
                                         style="pointer-events: none"
                                         onclick="return false;"
                                       >
+                                        <!-- nuevo -->
                                         <img
                                           id="informacion"
                                           class="adapt-img info2"
