--- a/page4/index.html
+++ b/page4/index.html
@@ -187,7 +187,7 @@
     <!-- Centro Acreditado -->
 
     <div class="es-wrapper-color centros-acreditado">
-      <table
+      <!-- <table
         id="espacio1"
         class="es-content"
         cellspacing="0"
@@ -256,6 +256,149 @@
             </td>
           </tr>
         </tbody>
+      </table> -->
+      <table
+        id="espacio1"
+        class="es-content"
+        cellspacing="0"
+        cellpadding="0"
+        align="center"
+        style="background-color: #f5f5f5"
+      >
+        <tbody>
+          <tr>
+            <td class="esd-stripe" align="center">
+              <table
+                class="es-content-body"
+                cellspacing="0"
+                cellpadding="0"
+                bgcolor="#f5f5f5"
+                align="center"
+              >
+                <tbody>
+                  <tr>
+                    <td
+                      class="esd-structure"
+                      esd-general-paddings-checked="false"
+                      align="left"
+                    >
+                      <table width="100%" cellspacing="0" cellpadding="0">
+                        <tbody>
+                          <tr>
+                            <td
+                              class="esd-container-frame"
+                              valign="top"
+                              align="center"
+                            >
+                              <table
+                                width="100%"
+                                cellspacing="0"
+                                cellpadding="0"
+                              >
+                                <tbody>
+                                  <tr>
+                                    <td class="esd-block-image" align="center">
+                                      <a
+                                        href="#"
+                                        id="container-img"
+                                        style="pointer-events: none"
+                                        onclick="return false;"
+                                      >
+                                        <!-- width="800" -->
+                                        <!-- <img
+                                          id="informacion"
+                                          class="adapt-img"
+                                          src="images/informacion.png"
+                                        /> -->
+                                        <!-- nuevo -->
+                                        <div
+                                          id="informacion"
+                                          class="contenedor info-cuadro"
+                                        >
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>
+                                              Énfasis en el desarrollo de la
+                                              expresion oral
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>
+                                              Programas diferenciados para
+                                              niños, adolescentes y adultos
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>
+                                              Logros y objetivos comunicativos
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>
+                                              Grupos Homogéneos y reducidos
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>
+                                              Dinamica grupal que garantiza el
+                                              aprendizaje
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/youtube.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>Docentes Especializados</h4>
+                                          </div>
+                                        </div>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </tr>
+        </tbody>
       </table>
       <table
         id="espacio1"
@@ -306,7 +449,7 @@
                                       >
                                         <img
                                           id="informacion"
-                                          class="adapt-img"
+                                          class="adapt-img info2"
                                           src="images/informacion2.png"
                                           width="800"
                                         />
